--- a/advanced-ray/02-Ray-Tasks-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Tasks-Revisited.ipynb
@@ -8,9 +8,7 @@
     "\n",
     "The [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) introduced the core concepts of Ray's API and how they parallelize work. Specifically, we learned how to define Ray _tasks_, run them, and retrieve the results. \n",
     "\n",
-    "This lesson explores Ray tasks in greater depth, including how task dependencies are handled automatically by Ray, `ray.wait()` usage patterns, profiling tasks, and a peak under the hood at Ray's architecture and runtime behavior.\n",
-    "\n",
-    "> **Tip:** Recall that the [Ray Package Reference](https://ray.readthedocs.io/en/latest/package-ref.html) in the [Ray Docs](https://ray.readthedocs.io/en/latest/) is useful for exploring the API features we'll learn."
+    "This lesson explores Ray tasks in greater depth, including how task dependencies are handled automatically by Ray, `ray.wait()` usage patterns, profiling tasks, and a peak under the hood at Ray's architecture and runtime behavior."
    ]
   },
   {
@@ -1296,120 +1294,46 @@
    "source": [
     "Consider the following architecture diagram for Ray:\n",
     "\n",
-    "![Ray Architecture](../images/Ray-Architecture.j)"
+    "![Ray Architecture](../images/Ray-Architecture.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assume we will invoke the `make_array` task twice, then invoke `add_arrays` to sum the returned NumPy arrays. Graphically, it looks as follows:\n",
+    "The lettered arrows correspond to communications between components. As we describe them, we'll define a number of terms as we go, then recap those definitions below for easier reference.\n",
     "\n",
-    "![Ray under the hood 1](../images/Ray-Cluster/Ray-Cluster.001.jpeg)"
+    "* a. **Task** submission and object reference counting messages exchanged between the **driver** program and **workers**, which run the Ray tasks. It's not shown, but this pathway also happens between the driver and the local **worker**. \n",
+    "* b. Local task scheduling, where the **driver** invokes the **scheduler** with a request to schedule a Ray task. For historical reasons, this process is called a **Raylet**.\n",
+    "* c. Remote (distributed) task scheduling. The Ray library running in the **driver** process also coordinates resource scheduling directly with remote **schedulers**. This is a recent optimization to remove the bottleneck of running all such requests via the local **scheduler**.\n",
+    "* d. Distributed object transfer. Large objects are stored in the **object store**. Occasionally an object needs to be transferred to the **object store** on another node so it is co-resident with the task that needs it. Reading is zero-copy, because shared memory is used. The **object store** is implemented with [Plasma, part of PyArrow](https://arrow.apache.org/docs/python/plasma.html). Small objects that result from task computation are actually copied directly to the driver or worker that requested them, bypassing the overhead of going through the **object store**.\n",
+    "* e. Location lookup for objects stored in the distributed **object store**. The **object table** holds this metadata.\n",
+    "* f. Storage and retrieval of objects created through `ray.put` and large objects returned from a task. Retrieval is via `ray.get` or during task execution, when replacing a task’s `ObjectID` argument with the object’s value.\n",
+    "* g. **scheduler** messages exchanged with the **object store** to coordinate objects required for tasks."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How does this get scheduled in a cluster? Here we'll assume a three-node cluster that has resources for running two Ray worker tasks per node (under powered compared to what we learned using Ray Dashboard last lesson!).\n",
-    "![Ray under the hood 2](../images/Ray-Cluster/Ray-Cluster.002.jpeg)"
+    "> **Recap:** Let's recap the term definitions:\n",
+    ">\n",
+    "> * **Actor Table:** Metadata about the actors in the system. Part of the **Global Control Store**.\n",
+    "> * **Client Table:** Metadata about the the **driver** and **workers** that have requested resources, such as a compute \"slot\" in a **worker**. Part of the **Global Control Store**.\n",
+    "> * **Driver:** The program you write that uses Ray, like each notebook in these tutorials. It coordinates task scheduling with the local and remote **Schedulers (Raylets)**. \n",
+    "> * **Object Store (Plasma):** Where large objects are stored in shared memory, so local access is zero-copy. It is implemented with [Plasma, part of PyArrow](https://arrow.apache.org/docs/python/plasma.html). Small objects that result from task computation are actually copied directly to the driver or worker that requested them, bypassing the overhead of going through the **Object Store**. \n",
+    "> * **Object Table** holds metadata about the objects in the individual **Object Stores**, such as which objects are stored well. Part of the **Global Control Store**. \n",
+    "> * **Scheduler (Raylet):** The process running on each node in the Ray cluster that coordinates scheduling of tasks (including actor method invocations). **Raylet** is a historical name for this process, which used to have more responibilities than just scheduling.\n",
+    "> * **Task:** The unit of work executed by **Worker** at the request of a **Scheduler**.\n",
+    "> * **Worker**, a process to which Ray tasks are delegated for execution. "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "First, assume that the driver program is running on Node1. So it will invoke the local scheduler to schedule the three tasks.\n",
-    "![Ray under the hood 3](../images/Ray-Cluster/Ray-Cluster.003.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Immediately the ids for the task futures are returned. The _Global Control Store_ tracks where every task is running and every object is stored in the local _Object Stores_.\n",
-    "![Ray under the hood 4](../images/Ray-Cluster/Ray-Cluster.004.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Suppose the local scheduler has available capacity in the first worker on the same node. It schedules the first `make_array` task there.\n",
-    "![Ray under the hood 5](../images/Ray-Cluster/Ray-Cluster.005.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It decides to schedule the second `make_array` task in a worker on node 2.\n",
-    "![Ray under the hood 6](../images/Ray-Cluster/Ray-Cluster.006.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When the two tasks finish, they place their result objects in their local object stores.\n",
-    "![Ray under the hood 7](../images/Ray-Cluster/Ray-Cluster.007.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now `add_array` can be scheduled, because the two tasks it depends on are done. Let's suppose it gets scheduled in the second worker on Node 1.\n",
-    "![Ray under the hood 8](../images/Ray-Cluster/Ray-Cluster.008.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first object it needs is already on the same node, in the object store, so the `add_arrays` task can _read it directly from shared memory_. No copying is required to the worker's process space.\n",
-    "![Ray under the hood 9](../images/Ray-Cluster/Ray-Cluster.009.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "However, the second object is on a different node, so Ray copies it to the local object store. \n",
-    "![Ray under the hood 10](../images/Ray-Cluster/Ray-Cluster.010.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now it can also be read from shared memory.\n",
-    "![Ray under the hood 11](../images/Ray-Cluster/Ray-Cluster.011.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When `add_arrays` is finished, it writes its results to the local object store.\n",
-    "![Ray under the hood 12](../images/Ray-Cluster/Ray-Cluster.012.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "At this point, if the driver calls `ray.get(id3)`, it will return `obj3`.\n",
-    "![Ray under the hood 13](../images/Ray-Cluster/Ray-Cluster.013.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Whew! Hopefully you have a better sense of what Ray does under the hood. Scheduling tasks on other nodes and copying objects between object stores is efficient, but incurs unavoidable network overhead."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
