--- a/advanced-ray/03-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/03-Ray-Actors-Revisited.ipynb
@@ -8,9 +8,7 @@
     "\n",
     "The [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) introduced the core concepts of Ray's API and how they parallelize work. Specifically, we learned how to define Ray _tasks_, run them, and retrieve the results. \n",
     "\n",
-    "This lesson explores Ray actors in greater depth, including profiling actor behavior.\n",
-    "\n",
-    "> **Tip:** Recall that the [Ray Package Reference](https://ray.readthedocs.io/en/latest/package-ref.html) in the [Ray Docs](https://ray.readthedocs.io/en/latest/) is useful for exploring the API features we'll learn."
+    "This lesson explores Ray actors in greater depth, including profiling actor behavior."
    ]
   },
   {
