--- a/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
+++ b/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1 in 02-TaskParallelism-Part1\n",
+    "## Exercise 1 in 02: Ray Tasks Revisited\n",
     "\n",
     "You were asked to convert the regular Python code to Ray code. Here are the three cells appropriately modified.\n",
     "\n",
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2 in 03-TaskParallelism-Part2\n",
+    "## Exercise 2 in 02: Ray Tasks Revisited\n",
     "\n",
     "You were asked to use `ray.wait()` with a shorter timeout, `2.5` seconds. First we need to redefine in this notebook the remote functions we used in that lesson:"
    ]
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3 in 03-TaskParallelism-Part2\n",
+    "## Exercise 3 in 02: Ray Tasks Revisited\n",
     "\n",
     "You were asked to convert the code to use Ray, especially `ray.wait()`."
    ]
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4 - \"Homework\" - in 04-DistributedStateWithActors\n",
+    "## Exercise 4 - \"Homework\" - in 03: Ray Actors Revisited\n",
     "\n",
     "Since profiling shows that `live_neighbors` is the bottleneck, what could be done to reduce its execution time? The solution shown here reduces its overhead by about 40%. Not bad. \n",
     "\n",
