--- a/advanced-ray/04-Exploring-Ray-API-Calls.ipynb
+++ b/advanced-ray/04-Exploring-Ray-API-Calls.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Exploring Ray API Calls\n",
     "\n",
-    "This lesson explores a few of the other API calls you might find useful, as well as options that can be used with the API calls we've already learned. If you are pressed for time, consider skipping this lesson now and proceeding to the recap lesson [06-RecapTipsTricks](06-RecapAndTipsTricks.ipynb).\n",
+    "This lesson explores a few of the other API calls you might find useful, as well as options that can be used with the API calls we've already learned. \n",
     "\n",
-    "> **Tip:** The [Ray Package Reference](https://ray.readthedocs.io/en/latest/package-ref.html) in the [Ray Docs](https://ray.readthedocs.io/en/latest/) is useful for exploring the API features we'll learn."
+    "> **Tip:** The [Ray Package Reference](https://docs.ray.io/en/latest/package-ref.html) in the [Ray Docs](https://docs.ray.io/en/latest/) is useful for exploring the API features we'll learn."
    ]
   },
   {
