--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -51,7 +51,33 @@
     "\n",
     "### ray.init() Fails\n",
     "\n",
-    "If you get an error like `... INFO services.py:... -- Failed to connect to the redis server, retrying.`, it probably means you are running a VPN on your machine. [At this time](https://github.com/ray-project/ray/issues/6573), you can't use `ray.init()` with a VPN running. You'll have to stop your VPN to run `ray.init()`, then once it finishes, you can restart your VPN.\n",
+    "Suppose you get an error like this:\n",
+    "\n",
+    "```\n",
+    "... INFO services.py:... -- Failed to connect to the redis server, retrying.\n",
+    "```\n",
+    "\n",
+    "It probably means you are running a VPN on your machine. [At this time](https://github.com/ray-project/ray/issues/6573), you can't use `ray.init()` with a VPN running. You'll have to stop your VPN to run `ray.init()`, then once it finishes, you can restart your VPN.\n",
+    "\n",
+    "Suppose you successfully executed `!../tools/start-ray.sh` in a notebook, but then when you run `ray.init(adress='auto', ...)` you get the following error for some `IP` address and `PORT`:\n",
+    "\n",
+    "``` \n",
+    "ConnectionError: Error 61 connecting to IP:PORT. Connection refused.\n",
+    "```\n",
+    "\n",
+    "If the output of `../tools/start-ray.sh` includes instructions for passing a Redis password, e.g., `redis_password='5241590000000000'`, add this argument to the `ray.init()` call and try again. \n",
+    "\n",
+    "If that fails, it may be necessary to kill any old Redis processes that are running. On MacOS and Linux systems, use a terminal window and run the following command, shown with example output:\n",
+    "\n",
+    "```shell\n",
+    "$ ps -ef | grep redis\n",
+    "501 36029     1   0  1:53PM ??         0:00.03 .../lib/python3.7/site-packages/ray/core/src/ray/thirdparty/redis/src/redis-server *:48044\n",
+    "501 36030     1   0  1:53PM ??         0:00.02 .../lib/python3.7/site-packages/ray/core/src/ray/thirdparty/redis/src/redis-server *:42902\n",
+    "\n",
+    "$ kill 36029 36039\n",
+    "```\n",
+    "\n",
+    "Then try again.\n",
     "\n",
     "### Annoyances\n",
     "\n",
