Reordered the advanced tutorial lessons

--- a/advanced-ray/03-Ray-Internals.ipynb
+++ b/advanced-ray/03-Ray-Internals.ipynb
@@ -536,7 +536,7 @@
     "\n",
     "Actors will be cleaned up when either a) the creator of an actor exits or b) there are no more actor handles for an actor in scope in the cluster. A reference counting scheme is used to determine when an actor is no longer needed.\n",
     "\n",
-    "This is not true for [detached actors](https://docs.ray.io/en/latest/advanced.html#detached-actors), which are designed to be long-lived actors that can be referenced by name and must be explicitly cleaned up. We discuss detached actors in lesson [03: Ray Actors Revisited](03-Ray-Actors-Revisited.ipynb).\n",
+    "This is not true for [detached actors](https://docs.ray.io/en/latest/advanced.html#detached-actors), which are designed to be long-lived actors that can be referenced by name and must be explicitly cleaned up. We discussed detached actors in lesson [02: Ray Actors Revisited](02-Ray-Actors-Revisited.ipynb).\n",
     "\n",
     "When the creator of an actor exits, the actor itself will detect this via a pub-sub notification from the GCS and exit immediately. All pending and subsequent tasks submitted on this actor will then fail with a `RayActorError`.\n",
     "\n",
@@ -544,7 +544,7 @@
     "\n",
     "Actors may also unexpectedly crash during their runtime (e.g., from a segfault or calling `sys.exit`). When this happens and if this is a restartable actor with at least one restart remaining, the actor will be restarted and pending tasks will be resubmitted on the new actor. If the actor is not restartable or it has reached the maximum allowed restarts, all pending tasks will fail.\n",
     "\n",
-    "Actor restarting is also explored in lesson [03: Ray Actors Revisited](03-Ray-Actors-Revisited.ipynb)."
+    "Actor restarting was also explored in lesson [02: Ray Actors Revisited](02-Ray-Actors-Revisited.ipynb)."
    ]
   },
   {
