Finished Ray Tasks Revisisted, nearly done with Ray Actors Revisited

--- a/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
+++ b/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
@@ -21,7 +21,9 @@
    "outputs": [],
    "source": [
     "import ray, time, sys\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "sys.path.append(\"..\")\n",
+    "from util.printing import pd, pnd  # convenience methods for printing results."
    ]
   },
   {
@@ -30,15 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pnd(n, duration, prefix=''):\n",
-    "    \"\"\"Print an integer and a time duration, with an optional prefix.\"\"\"\n",
-    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
-    "    print('{:s}n: {:2d}, duration: {:6.3f} seconds'.format(prefix2, n, duration))\n",
-    "\n",
-    "def pd(duration, prefix=''):\n",
-    "    \"\"\"Print a time duration, with an optional prefix.\"\"\"\n",
-    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
-    "    print('{:s}duration: {:6.3f} seconds'.format(prefix2, duration))"
+    "!../tools/start-ray.sh"
    ]
   },
   {
@@ -71,7 +65,7 @@
     }
    ],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "ray.init(address='auto', ignore_reinit_error=True)"
    ]
   },
   {
