--- a/ray-crash-course/06-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/06-Running-Ray-Clusters.ipynb
@@ -4005,6 +4005,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You can also get cluster information inside your application using API methods.\n",
+    "\n",
+    "See [Inspect the Cluster State](\n",
+    "https://docs.ray.io/en/latest/package-ref.html#inspect-the-cluster-state) for details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ray start and ray stop\n",
     "\n",
     "As shown in the previous cell, `ray start` is used to start the Ray processes on a node. When the `--head` flag is used, it means this is the master node that will be used to bootstrap the cluster. \n",
@@ -4082,6 +4092,22 @@
     "\n",
     "> **Warning:** `ray stop` stops all running Ray processes on this node. There is no command line option to specify which one to stop."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ray memory\n",
+    "\n",
+    "A tool for profiling memory utilization\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
