--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note the arrow and pagination on the upper-right hand side. Sometimes navigating pages will take you to interesting data. Alto, the _Left Heavy_ button on the upper-left hand side is clicked, so the view is zoomed into the interesting data about the `step()` method profiled here."
+    "Note the arrow and pagination on the upper-right hand side. Sometimes navigating pages will take you to interesting data. Also, the _Left Heavy_ button on the upper-left hand side is clicked, so the view is zoomed into the interesting data about the `step()` method profiled here."
    ]
   },
   {
@@ -241,22 +241,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Libraries\n",
-    "\n",
-    "If tasks or actors call (or subclass) library code in your project and that code isn't in a _subdirectory_ of the driver script, make sure that the process starting Ray has the correct `PYTHONPATH` set to the library location. For example,\n",
-    "\n",
-    "```python\n",
-    "PYTHONPATH=$PYTHONPATH:/path/to/library python MyRayAppDriver.py\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Cleaning Up\n",
     "\n",
-    "When your driver script exists, it will implicitly call `ray.shutdown()`. This can be useful to do explicitly if you want to restart Ray, for example, in a notebook environment. For example:\n",
+    "When your driver script exists, it will implicitly call `ray.shutdown()`. This can be useful to do explicitly if you want to restart Ray, for example, in a notebook environment, like this:\n",
     "\n",
     "```python\n",
     "ray.shutdown()\n",
