--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -108,25 +108,25 @@
     "\n",
     "**Audience:** You are a developer who wants a fast introduction to the core Ray API. The first two lessons cover the essential parts of the Ray API for _tasks_ and _actors_. The rest of the lessons explore the origin and goals for Ray, Ray replacement versions of several popular multiprocessing APIs, a Ray _parallel iterator_ API, and working with Ray clusters using the `ray` command-line interface (CLI).\n",
     "\n",
-    "Experienced developers should go to [_Advanced Ray_](#user-content-advanced-ray). Data scientists may wish to skip to [_Ray RLlib_](#user-content-ray-rllib), [_Ray Tune_](#user-content-ray-tune), [_Ray SGD_](#user-content-ray-sgd), or [_Ray Serve_](#user-content-ray-serve).\n",
+    "Experienced developers should consider the _Advanced Ray_ tutorial. Data scientists may wish to skip to one of the _Ray RLlib_, _Ray Tune_, _Ray SGD_, or _Ray Serve_ tutorials.\n",
     "\n",
     "This is the place to start if you are new to Ray and you plan to use it to scale Python applications to a cluster. Data scientists working with Ray-based toolkits, like _RLlib_, don't need this knowledge to get started.\n",
     "\n",
-    "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the [_Advanced Ray_](#user-content-advanced-ray) tutorial begins with an explanation of why Ray was created, what problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
+    "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the _Advanced Ray_ tutorial explores more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
-    "| #  | Lesson (Notebook)                                         | Description                                               |\n",
-    "| :- | :-------------------------------------------------------- | :-------------------------------------------------------- |\n",
-    "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)            | A _table of contents_ for this tutorial.                  |\n",
-    "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)              | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
-    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)            | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
-    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
+    "| #  | Lesson (Notebook)                                         | Description                               |\n",
+    "| :- | :-------------------------------------------------------- | :---------------------------------------- |\n",
+    "| 00 | [Overview](00-Overview-Ray-Crash-Course.ipynb)            | A _table of contents_ for this tutorial.  |\n",
+    "| 01 | [Ray Tasks](01-Ray-Tasks.ipynb)                           | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
+    "| 02 | [Ray Actors](02-Ray-Actors.ipynb)                         | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
+    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.   |\n",
     "| 04 | [Ray Multiprocessing](04-Ray-Multiprocessing.ipynb)       | Ray drop-in replacements for common parallelism APIs and integration with `asyncio`. |\n",
     "| 05 | [Ray Parallel Iterators](05-Ray-Parallel-Iterators.ipynb) | A _parallel iterator_ API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops. |\n",
     "| 06 | [Running Ray Clusters](06-Running-Ray-Clusters.ipynb)     | A brief look at the Ray CLI commands for running and stopping Ray clusters. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Ray-Crash-Course-Solutions.ipynb).\n",
     "\n",
-    "Once you've completed this tutorial, go through [_Advanced Ray_](#user-content-advanced-ray) or explore one of the ML-related library tutorials, in any order."
+    "Once you've completed this tutorial, go through _Advanced Ray_ or explore one of the ML-related library tutorials, in any order."
    ]
   },
   {
@@ -141,9 +141,9 @@
     "\n",
     "Go through the [_Crash Course_](#ray-crash-course) first if you are new to Ray. This tutorial provides a deeper dive into Ray tasks and actors, such as profiling and debugging applications. It also surveys the rest of the core API.\n",
     "\n",
-    "| #  | Lesson | Description |\n",
-    "| :- | :----- | :---------- |\n",
-    "| 00 | [Overview](advanced-ray/00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
+    "| #  | Lesson (Notebook)                                         | Description                               |\n",
+    "| :- | :-------------------------------------------------------- | :---------------------------------------- |\n",
+    "| 00 | [Overview](advanced-ray/00-Overview-Advanced-Ray.ipynb)   | A _table of contents_ for this tutorial.  |\n",
     "| 01 | [Ray Tasks Revisited](advanced-ray/01-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, and task profiling techniques. |\n",
     "| 02 | [Ray Actors Revisited](advanced-ray/02-Ray-Actors-Revisited.ipynb) | A more in-depth look at actor characteristis and profiling actor performance using the _Ray Dashboard_. |\n",
     "| 03 | [Ray Internals](advanced-ray/03-Ray-Internals.ipynb) | Explores the architecture of Ray, task scheduling, the Object Store, etc. |\n",
@@ -166,8 +166,8 @@
     "\n",
     "Note that the `04a-04c` lessons can be studied in any order.\n",
     "\n",
-    "|     | Lesson | Description |\n",
-    "| :-- | :----- | :---------- |\n",
+    "| #   | Lesson (Notebook)                                         | Description                               |\n",
+    "| :-  | :-------------------------------------------------------- | :---------------------------------------- |\n",
     "| 00  | [Ray RLlib Overview](rllib/00-Ray-RLlib-Overview.iypnb) | Overview of this tutorial. |\n",
     "| 01  | [Introduction to Reinforcement Learning](rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning,  by @edoakes. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02  | [About RLlib](rllib/02-About-RLlib.ipynb) | An introduction to RLlib, its goals and the capabilities it provides. |\n",
