--- a/advanced-ray/04-Exploring-Ray-API-Calls.ipynb
+++ b/advanced-ray/04-Exploring-Ray-API-Calls.ipynb
@@ -13,74 +13,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ray already running or successfully started\n"
+     ]
+    }
+   ],
+   "source": [
+    "!../tools/start-ray.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If you are running on Google Colab, uncomment and run the following linkes\n",
-    "# to install the necessary dependencies.\n",
-    "\n",
-    "# print(\"Setting up colab environment\")\n",
-    "# !pip install -q ray"
+    "import ray, time, sys \n",
+    "import numpy as np \n",
+    "sys.path.append(\"..\")\n",
+    "from util.printing import pd, pnd  # convenience methods for printing results."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ray, time, sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pnd(n, duration, prefix=''):\n",
-    "    \"\"\"Print an integer and a time duration, with an optional prefix.\"\"\"\n",
-    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
-    "    print('{:s}n: {:2d}, duration: {:6.3f} seconds'.format(prefix2, n, duration))\n",
-    "\n",
-    "def pd(duration, prefix=''):\n",
-    "    \"\"\"Print a time duration, with an optional prefix.\"\"\"\n",
-    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
-    "    print('{:s}duration: {:6.3f} seconds'.format(prefix2, duration))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-16 13:53:54,447\tINFO resource_spec.py:212 -- Starting Ray with 4.93 GiB memory available for workers and up to 2.47 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-16 13:53:54,846\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
+      "2020-05-24 10:39:44,322\tWARNING worker.py:809 -- When connecting to an existing cluster, _internal_config must match the cluster's _internal_config.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:64881',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-16_13-53-54_434638_40563/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-16_13-53-54_434638_40563/sockets/raylet',\n",
+       " 'raylet_ip_address': '192.168.1.149',\n",
+       " 'redis_address': '192.168.1.149:15758',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-05-23_17-34-40_069358_39510/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-05-23_17-34-40_069358_39510/sockets/raylet',\n",
        " 'webui_url': 'localhost:8265',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-16_13-53-54_434638_40563'}"
+       " 'session_dir': '/tmp/ray/session_2020-05-23_17-34-40_069358_39510'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "ray.init(address='auto', ignore_reinit_error=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Ray Dashboard URL.\n",
+    "\n",
+    "The following URL will only work when running this lesson on your laptop. When using the Anyscale platform, use the URL provided by your instructor to access the Ray Dashboard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ray Dashboard: http://localhost:8265\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Ray Dashboard: http://{ray.get_webui_url()}')"
    ]
   },
   {
