--- a/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
+++ b/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
@@ -33,11 +33,11 @@
    "source": [
     "## \"Crash Course\" Tutorial Guide\n",
     "\n",
-    "| #  | Lesson (Notebook)                                         | Description                                               |\n",
-    "| :- | :-------------------------------------------------------- | :-------------------------------------------------------- |\n",
-    "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)            | A _table of contents_ for this tutorial.                  |\n",
-    "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)              | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
-    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)            | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
+    "| #  | Lesson (Notebook)                                         | Description                               |\n",
+    "| :- | :-------------------------------------------------------- | :---------------------------------------- |\n",
+    "| 00 | [Overview](00-Overview-Ray-Crash-Course.ipynb)            | A _table of contents_ for this tutorial.  |\n",
+    "| 01 | [Ray Tasks](01-Ray-Tasks.ipynb)                           | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
+    "| 02 | [Ray Actors](02-Ray-Actors.ipynb)                         | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
     "| 03 | [Why Ray?](03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
     "| 04 | [Ray Multiprocessing](04-Ray-Multiprocessing.ipynb)       | Ray drop-in replacements for common parallelism APIs and integration with `asyncio`. |\n",
     "| 05 | [Ray Parallel Iterators](05-Ray-Parallel-Iterators.ipynb) | A _parallel iterator_ API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops. |\n",
@@ -50,13 +50,6 @@
    "source": [
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-Crash-Course-Solutions.ipynb)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
