Added the Academy logo and copyrights to all notebooks

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -4,18 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anyscale Academy - Ray Tutorials"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Anyscale Academy - Training on Ray and the Ray Ecosystem\n",
+    "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
-    "Welcome to the [Anyscale Academy](https://anyscale.com/academy) tutorials on [Ray](https://ray.io), the system for scaling your applications from a laptop to a cluster.\n",
+    "![Anyscale Academy](images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "This notebook provides an overview of the tutorials available here. To set up the required version of Python and the libraries you need, see the instructions in the [README](./README.md)."
+    "Welcome to the [Anyscale Academy](https://anyscale.com/academy) training on [Ray](https://ray.io) and its ecosystem, the system for scaling your applications from a laptop to a cluster.\n",
+    "\n",
+    "This notebook provides an overview of the training available. If you downloaded these materials from the GitHub repo, see the instructions in the [README](./README.md) to set up the required version of Python and the libraries you need."
    ]
   },
   {
@@ -24,13 +21,13 @@
    "source": [
     "## Getting Help\n",
     "\n",
-    "This is an early release of these tutorials. Please report any issues!\n",
+    "We want to hear your feedback and any issues you encounter!\n",
     "\n",
     "* [GitHub issues](https://github.com/anyscale/academy/issues)\n",
     "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com)\n",
     "* [Email](mailto:academy@anyscale.com)\n",
     "\n",
-    "Troubleshooting tips are offered in known areas where you might encounter issues. All are summarized in the [_Troubleshooting, Tips, and Tricks notebook_](reference/Troubleshooting-Tips-Tricks.ipynb). For the details of the Ray API and the ML libraries, see the [Ray Docs](https://docs.ray.io/en/latest/).\n",
+    "Troubleshooting tips are offered in known areas where you might encounter issues. All are summarized in the [_Troubleshooting, Tips, and Tricks notebook_](reference/Troubleshooting-Tips-Tricks.ipynb). For the details of the Ray API and libraries built on Ray, see the [Ray Docs](https://docs.ray.io/en/latest/).\n",
     "\n",
     "If you are new to Jupyter Lab and Jupyter Notebooks, see _Help > JupyterLab Reference_. The _Help_ menu also has references for Python and various libraries."
    ]
@@ -114,15 +111,16 @@
     "\n",
     "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the _Advanced Ray_ tutorial explores more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
-    "| #  | Lesson (Notebook)                                         | Description                               |\n",
-    "| :- | :-------------------------------------------------------- | :---------------------------------------- |\n",
-    "| 00 | [Overview](00-Overview-Ray-Crash-Course.ipynb)            | A _table of contents_ for this tutorial.  |\n",
-    "| 01 | [Ray Tasks](01-Ray-Tasks.ipynb)                           | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
-    "| 02 | [Ray Actors](02-Ray-Actors.ipynb)                         | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
-    "| 03 | [Why Ray?](03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.   |\n",
-    "| 04 | [Ray Multiprocessing](04-Ray-Multiprocessing.ipynb)       | Ray drop-in replacements for common parallelism APIs and integration with `asyncio`. |\n",
-    "| 05 | [Ray Parallel Iterators](05-Ray-Parallel-Iterators.ipynb) | A _parallel iterator_ API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops. |\n",
-    "| 06 | [Running Ray Clusters](06-Running-Ray-Clusters.ipynb)     | A brief look at the Ray CLI commands for running and stopping Ray clusters. |\n",
+    "| #  | Lesson (Notebook)                                                          | Description                               |\n",
+    "| :- | :------------------------------------------------------------------------- | :---------------------------------------- |\n",
+    "| 00 | [Overview](ray-crash-course/00-Overview-Ray-Crash-Course.ipynb)            | A _table of contents_ for this tutorial.  |\n",
+    "| 01 | [Ray Tasks](ray-crash-course/01-Ray-Tasks.ipynb)                           | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
+    "| 02 | [Ray Actors](ray-crash-course/02-Ray-Actors.ipynb)                         | Understanding how Ray converts normal Python classes into distributed, _stateful actors_.  |\n",
+    "| 03 | [Why Ray?](ray-crash-course/03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.   |\n",
+    "| 04 | [Ray Multiprocessing](ray-crash-course/04-Ray-Multiprocessing.ipynb)       | Ray drop-in replacements for common parallelism APIs and integration with `asyncio`. |\n",
+    "| 05 | [Ray Parallel Iterators](ray-crash-course/05-Ray-Parallel-Iterators.ipynb) | A _parallel iterator_ API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops. |\n",
+    "| 06 | [Exploring Ray API Calls](ray-crash-course/06-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
+    "| 07 | [Running Ray Clusters](ray-crash-course/07-Running-Ray-Clusters.ipynb)     | A brief look at the Ray CLI commands for running and stopping Ray clusters. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Ray-Crash-Course-Solutions.ipynb).\n",
     "\n",
@@ -136,8 +134,6 @@
     "### Advanced Ray\n",
     "\n",
     "Directory: `advanced-ray`\n",
-    "\n",
-    "> **Note:** This is a draft tutorial, subject to significant change.\n",
     "\n",
     "Go through the [_Crash Course_](#ray-crash-course) first if you are new to Ray. This tutorial provides a deeper dive into Ray tasks and actors, such as profiling and debugging applications. It also surveys the rest of the core API.\n",
     "\n",
@@ -168,7 +164,7 @@
     "\n",
     "| #   | Lesson (Notebook)                                         | Description                               |\n",
     "| :-  | :-------------------------------------------------------- | :---------------------------------------- |\n",
-    "| 00  | [Ray RLlib Overview](rllib/00-Ray-RLlib-Overview.iypnb) | Overview of this tutorial. |\n",
+    "| 00  | [Ray RLlib Overview](rllib/00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01  | [Introduction to Reinforcement Learning](rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning,  by @edoakes. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02  | [About RLlib](rllib/02-About-RLlib.ipynb) | An introduction to RLlib, its goals and the capabilities it provides. |\n",
     "| 03  | [Application: Cart Pole](rllib/03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
