--- a/advanced-ray/00-Overview-Advanced-Ray.ipynb
+++ b/advanced-ray/00-Overview-Advanced-Ray.ipynb
@@ -4,16 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced Ray - Overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Advanced Ray - Overview\n",
+    "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
-    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), picks up where the [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) left off. It explores the rest of the core [Ray](https://ray.io) API ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html)).\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
+    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), picks up where the [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) left off. It explores tasks and actors in more detail, including profiling and debugging applications, and it explains Ray's internal architecture.\n",
     "\n",
     "See the instructions in the [README](../README.md) for setting up your environment to use this tutorial.\n",
     "\n",
@@ -30,11 +27,10 @@
     "\n",
     "| #  | Lesson (Notebook)                                         | Description                               |\n",
     "| :- | :-------------------------------------------------------- | :---------------------------------------- |\n",
-    "| 00 | [Overview](advanced-ray/00-Overview-Advanced-Ray.ipynb)   | A _table of contents_ for this tutorial.  |\n",
-    "| 01 | [Ray Tasks Revisited](advanced-ray/01-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, and task profiling techniques. |\n",
-    "| 02 | [Ray Actors Revisited](advanced-ray/02-Ray-Actors-Revisited.ipynb) | A more in-depth look at actor characteristis and profiling actor performance using the _Ray Dashboard_. |\n",
-    "| 03 | [Ray Internals](advanced-ray/03-Ray-Internals.ipynb) | Explores the architecture of Ray, task scheduling, the Object Store, etc. |\n",
-    "| 04 | [Exploring Ray API Calls](advanced-ray/04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
+    "| 00 | [Overview](00-Overview-Advanced-Ray.ipynb)   | A _table of contents_ for this tutorial.  |\n",
+    "| 01 | [Ray Tasks Revisited](01-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, and task profiling techniques. |\n",
+    "| 02 | [Ray Actors Revisited](02-Ray-Actors-Revisited.ipynb) | A more in-depth look at actor characteristis and profiling actor performance using the _Ray Dashboard_. |\n",
+    "| 03 | [Ray Internals](03-Ray-Internals.ipynb) | Explores the architecture of Ray, task scheduling, the Object Store, etc. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Advanced-Ray-Solutions.ipynb)."
    ]
