--- a/advanced-ray/03-Ray-Internals.ipynb
+++ b/advanced-ray/03-Ray-Internals.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Ray Internals\n",
     "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "The [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) introduced the core concepts of Ray's API and how they parallelize work. Specifically, we learned how to define Ray _tasks_, run them, and retrieve the results. \n",
     "\n",
     "This lesson explores how Ray works internally, the subsystems of Ray, the ocmmunications pathways, and the core concepts that Ray uses to schedule tasks, manage task results (objects) and actor state.\n",
