--- a/rllib/00-Ray-RLlib-Overview.ipynb
+++ b/rllib/00-Ray-RLlib-Overview.ipynb
@@ -4,14 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Ray RLlib - Overview\n",
+    "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
+    "> **NOTE:** This tutorial is prerelease.\n",
     "\n",
     "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), introduces _reinforcement learning_ (RL) and [RLlib](https://ray.readthedocs.io/en/latest/rllib.html), Ray's comprehensive RL library.\n",
     "\n",
