--- a/rllib/02-About-RLlib.ipynb
+++ b/rllib/02-About-RLlib.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# About RLlib"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# About RLlib\n",
+    "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "In the [previous lesson](01-Introduction-to-Reinforcement-Learning.ipynb), we learned the basic concepts of reinforcement learning, with a \"taste\" of [RLlib](https://rllib.io) and [OpenAI Gym](https://gym.openai.com). This lesson takes a step back to provide more information about RLlib and the features it provides. The subsequent lessons will continue our exploration of RL algorithms and tools.\n",
     "\n",
     "For more information about RLlib and its open source community:\n",
