--- a/advanced-ray/02-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Actors-Revisited.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Ray Actors Revisited\n",
     "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "The [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) introduced the core concepts of Ray's API and how they parallelize work. Specifically, we learned how to define Ray _tasks_ and _actors_, run them, and retrieve the results. \n",
     "\n",
     "This lesson explores Ray actors in greater depth, including the following:\n",
