--- a/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
+++ b/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
@@ -4,21 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray \"Crash Course\" Overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Ray \"Crash Course\" Overview\n",
+    "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
     "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), provides a \"just the facts\" introduction to [Ray](https://ray.io), the system for scaling your applications from a laptop to a cluster. Here, we start with a hands on exploration of the core Ray API for distributed work loads:\n",
     "\n",
     "* Ray _tasks_: Distributed execution of _stateless_ Python functions.\n",
     "* Ray _actors_: Distributed execution of _stateful_ Python classes.\n",
     "\n",
-    "Subsequent lessons explore the origin and goals for Ray, Ray replacement versions of several popular multiprocessing APIs, a Ray _parallel iterator_ API, and working with Ray clusters using the `ray` command-line interface (CLI).\n",
+    "Subsequent lessons explore the origin and goals for Ray, Ray replacement versions of several popular multiprocessing APIs, a Ray _parallel iterator_ API, the rest of the core [Ray](https://ray.io) API ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html)), and working with Ray clusters using the `ray` command-line interface (CLI). Pick among those lessons according to your interests. \n",
     "\n",
     "> **Tips:**\n",
     ">\n",
@@ -41,7 +38,8 @@
     "| 03 | [Why Ray?](03-Why-Ray.ipynb)                              | Now that you've seen Ray in action, take a step back and explore the origin and motivations for Ray, and the Ray growing ecosystem of libraries and tools.  |\n",
     "| 04 | [Ray Multiprocessing](04-Ray-Multiprocessing.ipynb)       | Ray drop-in replacements for common parallelism APIs and integration with `asyncio`. |\n",
     "| 05 | [Ray Parallel Iterators](05-Ray-Parallel-Iterators.ipynb) | A _parallel iterator_ API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops. |\n",
-    "| 06 | [Running Ray Clusters](06-Running-Ray-Clusters.ipynb)     | A brief look at the Ray CLI commands for running and stopping Ray clusters. |\n"
+    "| 06 | [Exploring Ray API Calls](06-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
+    "| 07 | [Running Ray Clusters](07-Running-Ray-Clusters.ipynb)     | A brief look at the Ray CLI commands for running and stopping Ray clusters. |\n"
    ]
   },
   {
