--- a/ray-crash-course/03-Why-Ray.ipynb
+++ b/ray-crash-course/03-Why-Ray.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Ray Crash Course - Why Ray?\n",
     "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "The first two lessons explored using Ray for task and actor concurrency. This lesson takes a step back and explains the challenges that led to the creation of Ray and the Ray ecosystem. The end of this lesson also has links for more or more information on Ray and Anyscale."
    ]
   },
