--- a/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
+++ b/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Ray Crash Course - Ray Parallel Iterators\n",
     "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "This lesson explores `ray.util.iter` ([documentation](https://docs.ray.io/en/latest/iter.html)), which provides a parallel iterator API for simple data ingest and processing. It can be thought of as syntactic sugar around Ray actors and `ray.wait` loops.\n",
     "\n",
     "Parallel iterators are lazy, so they can operate over infinite sequences of items. Iterator transformations are only executed when the user calls `next()` to fetch the next output item from the iterator.\n",
