--- a/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
+++ b/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Exploring Ray API Calls\n",
     "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "This lesson explores a few of the other API calls you might find useful, as well as options that can be used with the API calls we've already learned. \n",
     "\n",
     "> **Tip:** The [Ray Package Reference](https://docs.ray.io/en/latest/package-ref.html) in the [Ray Docs](https://docs.ray.io/en/latest/) is useful for exploring the API features we'll learn."
