--- a/ray-crash-course/07-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/07-Running-Ray-Clusters.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Ray Crash Course - Ray Clusters and the Ray CLI\n",
     "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "We used the `../tools/start-ray.sh` script to run a Ray \"cluster\" on our local machines or to detect that one is running already, such as when you go through these lessons using the Anyscale hosted platform. This script uses the Ray CLI command `ray` to perform these tasks. \n",
     "\n",
     "Let's briefly explore a few of the Ray CLI subcommands. For the full documentation, see the ray documentation for the [Ray CLI](https://docs.ray.io/en/latest/package-ref.html#the-ray-command-line-api). See also the [Cluster Setup](https://docs.ray.io/en/latest/cluster-index.html) section.\n",
