--- a/rllib/03-Application-Cart-Pole.ipynb
+++ b/rllib/03-Application-Cart-Pole.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Recall that the `gym` Python module provides MDP interfaces to a variety of simulators, like the simple simulator for the physics of balancing a pole on a cart that is used by the CartPole environment. The _CartPole_ problem is described at https://gym.openai.com/envs/CartPole-v0. Here is an image from that website:\n",
     "\n",
-    "![Cart Pole](../images/Cart-Pole.png)\n",
+    "![Cart Pole](../images/rllib/Cart-Pole.png)\n",
     "\n",
     "Even though this is a relatively simple and quick example to run, its results can be understood quite visually.\n",
     "\n",
